modify CommonCharactersOfTwoStrings